fix ifft and idst in ex_2.ipynb

--- a/ex/ex_2.ipynb
+++ b/ex/ex_2.ipynb
@@ -50,7 +50,7 @@
     "$$\n",
     "#### Procedure:\n",
     "##### - Step 1: solve $y = \\Lambda^{-1} {\\bf F} b = \\Lambda^{-1} \\mathcal{F}[b]$\n",
-    "##### - Step 2: solve $x = F^H y = \\mathcal{F}[y]$ \n",
+    "##### - Step 2: solve $x = F^H y = \\mathcal{F}^{-1}[y]$ \n",
     "\n",
     "##### remark: help(fft.fft)"
    ]
@@ -65,7 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "file has already exists!\n"
+      "file make direction sucessfully!\n"
      ]
     }
    ],
@@ -101,11 +101,11 @@
       " [ 0.  0.  0. ... -1.  3. -1.]\n",
       " [-1.  0.  0. ...  0. -1.  3.]]\n",
       "FFT solution of Ax = b: \n",
-      " [1.+0.j 1.+0.j 1.+0.j ... 1.+0.j 1.+0.j 1.+0.j]\n",
+      " [1.+0.j 1.+0.j 1.+0.j ... 1.+0.j 1.-0.j 1.+0.j]\n",
       "Error of x and x_hat: \n",
       " 4.440892098500626e-16\n",
       "Error of b and b_hat: \n",
-      " 8.881784197001252e-16\n"
+      " 0.0\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
     "b = np.ones(N)\n",
     "\n",
     "# DFT for b\n",
-    "F_b = fft.fft(b) / N**0.5\n",
+    "F_b = fft.fft(b) \n",
     "\n",
     "# step 1:\n",
     "# eigen-values of A\n",
@@ -128,7 +128,7 @@
     "y = F_b / eigen_vals\n",
     "\n",
     "# step 2:\n",
-    "x_hat = fft.fft(y) / N**0.5\n",
+    "x_hat = fft.ifft(y)\n",
     "\n",
     "# validation\n",
     "print(\"FFT solution of Ax = b: \\n\", x_hat)\n",
@@ -221,7 +221,7 @@
     "$$\n",
     "#### remark:\n",
     "##### - first solve $\\bf{ y} = \\Lambda^{-1} {\\bf S} \\bf{ g} = \\Lambda^{-1} \\mathcal{S}[\\bf{ g}]$\n",
-    "##### - second solve $\\bf{ u}  = S y = \\mathcal{S}[\\bf{ y}]$ \n",
+    "##### - second solve $\\bf{ u}  = S^{-1} y = \\mathcal{S}^{-1}[\\bf{ y}]$ \n",
     "\n",
     "\n",
     "##### remark: help(fft.dst)"
@@ -274,7 +274,7 @@
     "g_x = func(x)\n",
     "\n",
     "# DST for g\n",
-    "S_g = fft.dst(g_x, type = 1) / 2.0 / ((N+1.0)/2)**0.5\n",
+    "S_g = fft.dst(g_x, type = 1)\n",
     "\n",
     "# step 1:\n",
     "# eigen-values of A\n",
@@ -282,7 +282,7 @@
     "y = S_g / eigen_vals\n",
     "\n",
     "# step 2:\n",
-    "u_hat = fft.dst(y, type = 1) / 2.0 / ((N+1.0)/2)**0.5\n",
+    "u_hat = fft.idst(y, type = 1)\n",
     "u_ex = u(x)\n",
     "\n",
     "# validation\n",
