--- a/ex/ex_3_RK_solver.ipynb
+++ b/ex/ex_3_RK_solver.ipynb
@@ -47,8 +47,8 @@
     "\n",
     "        for n in range(nt-1):\n",
     "            k1 = self.f(t[n], y[n])\n",
-    "            k2 = self.f(t[n] + 2.0 / 3.0 * dt, y[n] + 2.0 / 3.0 * dt * k1)\n",
-    "            y[n+1] = y[n] + (k1 + 3.0 * k2) * dt / 4.0\n",
+    "            k2 = self.f(t[n] + 2.0 / 3.0 * self.dt, y[n] + 2.0 / 3.0 * self.dt * k1)\n",
+    "            y[n+1] = y[n] + (k1 + 3.0 * k2) * self.dt / 4.0\n",
     "            \n",
     "        return t, y\n",
     "    \n",
@@ -61,9 +61,9 @@
     "\n",
     "        for n in range(nt-1):\n",
     "            k1 = self.f(t[n], y[n])\n",
-    "            k2 = self.f(t[n] + 0.5 * dt, y[n] + 0.5 * dt * k1)\n",
-    "            k3 = self.f(t[n+1], y[n] - dt * k1 + 2.0 * dt * k2)\n",
-    "            y[n+1] = y[n] + (k1 + 4.0 * k2 + k3) * dt / 6\n",
+    "            k2 = self.f(t[n] + 0.5 * self.dt, y[n] + 0.5 * self.dt * k1)\n",
+    "            k3 = self.f(t[n+1], y[n] - self.dt * k1 + 2.0 * self.dt * k2)\n",
+    "            y[n+1] = y[n] + (k1 + 4.0 * k2 + k3) * self.dt / 6\n",
     "            \n",
     "        return t, y\n",
     "    \n",
@@ -76,10 +76,10 @@
     "\n",
     "        for n in range(nt-1):\n",
     "            k1 = self.f(t[n], y[n])\n",
-    "            k2 = self.f(t[n] + 0.5 * dt, y[n] + 0.5 * dt * k1)\n",
-    "            k3 = self.f(t[n] + 0.5 * dt, y[n] + 0.5 * dt * k2)\n",
-    "            k4 = self.f(t[n+1], y[n] + dt * k3)\n",
-    "            y[n+1] = y[n] + (k1 + 2.0 * k2 + 2.0 * k3 + k4) * dt / 6.0\n",
+    "            k2 = self.f(t[n] + 0.5 * self.dt, y[n] + 0.5 * self.dt * k1)\n",
+    "            k3 = self.f(t[n] + 0.5 * self.dt, y[n] + 0.5 * self.dt * k2)\n",
+    "            k4 = self.f(t[n+1], y[n] + self.dt * k3)\n",
+    "            y[n+1] = y[n] + (k1 + 2.0 * k2 + 2.0 * k3 + k4) * self.dt / 6.0\n",
     "            \n",
     "        return t, y\n",
     "    \n",
@@ -90,11 +90,11 @@
     "        \n",
     "        Iter = 100\n",
     "        y[0] = init\n",
-    "        y[1] = y[0] +  self.f(t[0], y[0]) * dt \n",
+    "        y[1] = y[0] +  self.f(t[0], y[0]) * self.dt \n",
     "        \n",
     "        for n in range(nt-2):\n",
     "            for j in range(Iter):\n",
-    "                y[n+2] = - y[n] / 3.0 + y[n+1] * 4.0 / 3.0 + self.f(t[n+2], y[n+2]) * dt * 2.0 / 3.0\n",
+    "                y[n+2] = - y[n] / 3.0 + y[n+1] * 4.0 / 3.0 + self.f(t[n+2], y[n+2]) * self.dt * 2.0 / 3.0\n",
     "            \n",
     "        return t, y\n",
     "\n",
