--- a/src/Interpolation.ipynb
+++ b/src/Interpolation.ipynb
@@ -110,10 +110,9 @@
     "    D[:, 0] = grid_y\n",
     "    for j in range(1, size_x):\n",
     "        for k in range(j, size_x):\n",
-    "            D[k, j] = (D[k, j-1] - D[k-1, j-1]) / (grid_x[k] - grid_x[k-j])\n",
+    "            D[k, j] = (D[k, j-1] - D[k-1, j-1]) / (grid_x[k] - grid_x[k-1])\n",
     "\n",
-    "    newton_sum = 0.0\n",
-    "    basis_func = 1.0\n",
+    "    newton_sum, basis_func = 0.0, 1.0\n",
     "    for i in range(size_x):\n",
     "        newton_sum += D[i, i] * basis_func\n",
     "        basis_func *= x - grid_x[i]    \n",
