--- a/src/Interpolation.ipynb
+++ b/src/Interpolation.ipynb
@@ -110,7 +110,7 @@
     "    D[:, 0] = grid_y\n",
     "    for j in range(1, size_x):\n",
     "        for k in range(j, size_x):\n",
-    "            D[k, j] = (D[k, j-1] - D[k-1, j-1]) / (grid_x[k] - grid_x[k-1])\n",
+    "            D[k, j] = (D[k, j-1] - D[k-1, j-1]) / (grid_x[k] - grid_x[k-j])\n",
     "\n",
     "    newton_sum, basis_func = 0.0, 1.0\n",
     "    for i in range(size_x):\n",
@@ -147,6 +147,15 @@
    "outputs": [],
    "source": [
     "%timeit _newton_interp(grids = [x, R(x)], x = xx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max(abs(_newton_interp(grids = [x, R(x)], x = xx) - newton_interp(grids = [x, R(x)], x = xx)))"
    ]
   },
   {
