--- a/src/Lorenz_solver.ipynb
+++ b/src/Lorenz_solver.ipynb
@@ -84,14 +84,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "h = 0.001\n",
+    "t_num, x_num, y_num, z_num = lorenz_solver(F = F, init = [1.0, 1.0, 1.0], T = 20.0, dt = h)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig = plt.figure(figsize=(8, 12))\n",
     "ax = fig.gca(projection='3d')\n",
     "\n",
-    "h = 0.001\n",
-    "t_num, x_num, y_num, z_num = lorenz_solver(F = F, init = [1.0, 1.0, 1.0], T = 20.0, dt = h)\n",
-    "\n",
     "ax.plot(x_num, y_num, z_num, label='parametric curve')\n",
     "ax.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(8, 12))\n",
+    "ax = plt.axes(projection='3d')\n",
+    "scale_x, scale_y, scale_z = 1.0, 1.0, 1.0\n",
+    "ax.get_proj = lambda: np.dot(Axes3D.get_proj(ax), np.diag([scale_x, scale_y, scale_z, 1]))\n",
+    "\n",
+    "z = z_num\n",
+    "x = x_num\n",
+    "y = y_num\n",
+    "\n",
+    "ax.plot3D(x, y, z, '#725E79')\n",
+    "# ax.plot3D(x, y, z)\n",
+    "ax.set_title('Solution of Lorenz equation')\n",
+    "ax.set_xlabel(\"X-axis\")\n",
+    "ax.set_ylabel(\"Y-axis\")\n",
+    "ax.set_zlabel(\"Z-axis\")\n",
+    "ax.w_xaxis.set_pane_color((1.0, 1.0, 1.0, 1.0))\n",
+    "ax.w_yaxis.set_pane_color((1.0, 1.0, 1.0, 1.0))\n",
+    "ax.w_zaxis.set_pane_color((1.0, 1.0, 1.0, 1.0))\n",
+    "ax.set(xlim=[-20.0, 25.0], ylim=[-20.0, 20.0], zlim=[0.0, 50.0])\n",
+    "plt.xticks([-20.0, -10.0, 0.0, 10.0, 25.0])\n",
+    "ax.view_init(30, -60)\n",
+    "plt.legend(labels=['parametric curve',], loc='best')\n",
     "plt.show()"
    ]
   },
@@ -129,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
