--- a/src/Interpolation.ipynb
+++ b/src/Interpolation.ipynb
@@ -46,9 +46,11 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from typing import List, Tuple  # 使用 typing 库对以下代码进行类型提示\n",
     "\n",
-    "import os\n",
+    "# import os\n",
     "from make_dir import mkdir\n",
+    "\n",
     "mkdir(file_dir=\"./figure\")"
    ]
   },
@@ -58,8 +60,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def R(x):\n",
-    "    return 1.0 / (1.0 + x**2)"
+    "def R(x: float) -> float:\n",
+    "    return 1.0 / (1.0 + x**2)\n"
    ]
   },
   {
@@ -68,31 +70,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def newton_interp(grids, x):\n",
-    "    \n",
+    "def newton_interp(grids: Tuple[List[float], List[float]], x: float) -> float:\n",
     "    grid_x, grid_y = grids\n",
-    "    if len(grid_x) != len(grid_x):\n",
-    "        print(\"Error: Length of grid_x and grid_y must be the same !\")\n",
+    "    assert len(grid_x) == len(grid_x), \"Error: Length of grid_x and grid_y must be the same!\"\n",
     "    \n",
-    "    else:\n",
-    "        newton_sum, basis_func = 0.0, 1.0\n",
-    "        for i in range(len(grid_x)): \n",
-    "            coef = 0.0\n",
-    "            for j in range(i + 1):\n",
-    "                g = 1.0\n",
-    "                for k in range(i + 1):\n",
-    "                    if k != j:\n",
-    "                        dist = grid_x[j] - grid_x[k]\n",
-    "                        if abs(dist) > 1.0e-8:\n",
-    "                            g *= dist\n",
-    "                        else: # can be optimized\n",
-    "                            print(\"[Error: The distance between x_{:d} and x_{:d} are too small !]\".format(k, j))\n",
-    "            \n",
-    "                coef += grid_y[j] / g\n",
-    "            newton_sum += coef * basis_func\n",
-    "            basis_func *= x - grid_x[i]  \n",
+    "    newton_sum, basis_func = 0.0, 1.0\n",
+    "    for i in range(len(grid_x)):\n",
+    "        coef = 0.0\n",
+    "        for j in range(i + 1):\n",
+    "            g = 1.0\n",
+    "            for k in range(i + 1):\n",
+    "                if k != j:\n",
+    "                    dist = grid_x[j] - grid_x[k]\n",
+    "                    assert abs(dist) > 1.0e-8, f\"[Error: The distance between x_{k:d} and x_{j:d} are too small!]\"\n",
+    "                    g *= dist\n",
     "\n",
-    "        return newton_sum"
+    "            coef += grid_y[j] / g\n",
+    "        newton_sum += coef * basis_func\n",
+    "        basis_func *= x - grid_x[i]\n",
+    "\n",
+    "    return newton_sum\n"
    ]
   },
   {
@@ -101,8 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _newton_interp(grids, x):\n",
-    "    \n",
+    "def _newton_interp(grids: Tuple[List[float], List[float]], x: float) -> float:\n",
     "    grid_x, grid_y = grids\n",
     "    size_x = len(grid_x)\n",
     "\n",
@@ -110,15 +106,39 @@
     "    D[:, 0] = grid_y\n",
     "    for j in range(1, size_x):\n",
     "        for k in range(j, size_x):\n",
-    "            D[k, j] = (D[k, j-1] - D[k-1, j-1]) / (grid_x[k] - grid_x[k-j])\n",
+    "            D[k, j] = (D[k, j - 1] - D[k - 1, j - 1]) / (grid_x[k] - grid_x[k - j])\n",
     "\n",
     "    newton_sum, basis_func = 0.0, 1.0\n",
     "    for i in range(size_x):\n",
     "        newton_sum += D[i, i] * basis_func\n",
-    "        basis_func *= x - grid_x[i]    \n",
-    "    \n",
-    "    return newton_sum\n",
-    "        "
+    "        basis_func *= x - grid_x[i]\n",
+    "\n",
+    "    return newton_sum\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def linear_interp(grids: Tuple[List[float], List[float]], x: float) -> float:\n",
+    "#     grid_x, grid_y = grids\n",
+    "#     assert len(grid_x) == len(grid_x), \"Error: Length of grid_x and grid_y must be the same!\"\n",
+    "\n",
+    "#     order = np.argsort(grid_x)\n",
+    "#     grid_x, grid_y = grid_x[order], grid_y[order]\n",
+    "\n",
+    "#     linear_sum = 0.0\n",
+    "#     for i in range(len(grid_x) - 1):\n",
+    "#         dist = grid_x[i + 1] - grid_x[i]\n",
+    "#         assert abs(dist) > 1.0e-8, \"[Error: The distance between x_{:d} and x_{:d} are too small !]\".format(i, i + 1)\n",
+    "#         basis_func = (grid_y[i] * (grid_x[i + 1] - x) + grid_y[i + 1] * (x - grid_x[i])) / (grid_x[i + 1] - grid_x[i])\n",
+    "#         func = lambda x: 1 if (x < grid_x[i + 1] and x >= grid_x[i]) else 0.0\n",
+    "#         cond = np.array(list(map(func, x)))\n",
+    "#         linear_sum += basis_func * cond\n",
+    "\n",
+    "#     return linear_sum\n"
    ]
   },
   {
@@ -155,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max(abs(_newton_interp(grids = [x, R(x)], x = xx) - newton_interp(grids = [x, R(x)], x = xx)))"
+    "max(abs(_newton_interp(grids=[x, R(x)], x=xx) - newton_interp(grids=[x, R(x)], x=xx)))"
    ]
   },
   {
@@ -167,18 +187,21 @@
     "x = np.linspace(-5, 5, 11)\n",
     "# x = 5.0 * np.cos((2.0*x + 1.0) / 42.0 * np.pi)\n",
     "xx = np.linspace(-5, 5, 101)\n",
-    "y = _newton_interp(grids = [x, R(x)], x = xx)\n",
-    "plt.style.use(\"seaborn-dark\") \n",
+    "y = _newton_interp(grids=[x, R(x)], x=xx)\n",
+    "plt.style.use(\"seaborn-dark\")\n",
     "fig = plt.figure()\n",
-    "plt.plot(x, R(x), color = \"r\", linewidth = 0.0, marker = \"x\", label = \"grids\")\n",
-    "plt.plot(xx, y, color = \"b\", linewidth = 1.0, linestyle = 'dashed', label = r\"$N_n(x) \\; (n = 10)$\")\n",
-    "plt.plot(xx, R(xx), color = \"k\", label = r\"$R(x) = 1 / (1+x^2)$\")\n",
+    "plt.plot(x, R(x), color=\"r\", linewidth=0.0, marker=\"x\", label=\"grids\")\n",
+    "plt.plot(\n",
+    "    xx, y, color=\"b\", linewidth=1.0, linestyle=\"dashed\", label=r\"$N_n(x) \\; (n = 10)$\"\n",
+    ")\n",
+    "plt.plot(xx, R(xx), color=\"k\", label=r\"$R(x) = 1 / (1+x^2)$\")\n",
     "plt.xlabel(r\"$x$\")\n",
     "plt.ylabel(r\"$y$\")\n",
     "plt.grid()\n",
     "plt.legend()\n",
     "# plt.savefig(\"./figure/newton_interpolation.pdf\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "plt.close()"
    ]
   },
   {
@@ -187,29 +210,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def lagrange_interp(grids, x): \n",
-    "\n",
+    "def lagrange_interp(grids: Tuple[List[float], List[float]], x: float) -> float:\n",
     "    grid_x, grid_y = grids\n",
-    "    if len(grid_x) != len(grid_x):\n",
-    "        print(\"Error: Length of grid_x and grid_y must be the same !\")\n",
-    "        \n",
-    "    else:\n",
-    "        lagrange_sum = 0.0\n",
-    "        length = len(grid_x)\n",
-    "        for i in range(length):\n",
-    "            x_i = grid_x[i]\n",
-    "            basis_func = 1.0\n",
-    "            for j in range(length):\n",
-    "                if (i != j):\n",
-    "                    dist = x_i - grid_x[j] \n",
-    "                    if abs(dist) > 1.0e-8:\n",
-    "                        basis_func *= (x - grid_x[j]) / dist\n",
-    "                    else: # can be optimized\n",
-    "                        print(\"[Error: The distance between x_{:d} and x_{:d} are too small !]\".format(i, j))\n",
-    "                        \n",
-    "            lagrange_sum += grid_y[i] * basis_func\n",
+    "    assert len(grid_x) == len(grid_x), \"Error: Length of grid_x and grid_y must be the same!\"\n",
     "\n",
-    "        return lagrange_sum"
+    "    lagrange_sum = 0.0\n",
+    "    length = len(grid_x)\n",
+    "    for i in range(length):\n",
+    "        x_i = grid_x[i]\n",
+    "        basis_func = 1.0\n",
+    "        for j in range(length):\n",
+    "            if i != j:\n",
+    "                dist = x_i - grid_x[j]\n",
+    "                assert abs(dist) > 1.0e-8, \"[Error: The distance between x_{:d} and x_{:d} are too small !]\".format(i, j)\n",
+    "                basis_func *= (x - grid_x[j]) / dist\n",
+    "\n",
+    "        lagrange_sum += grid_y[i] * basis_func\n",
+    "\n",
+    "    return lagrange_sum\n"
    ]
   },
   {
@@ -219,20 +237,23 @@
    "outputs": [],
    "source": [
     "index = np.linspace(0, 20, 21)\n",
-    "x = 5.0 * np.cos((2.0*index + 1.0) / 42.0 * np.pi)\n",
+    "x = 5.0 * np.cos((2.0 * index + 1.0) / 42.0 * np.pi)\n",
     "xx = np.linspace(-5, 5, 101)\n",
-    "y = lagrange_interp(grids = [x, R(x)], x = xx)\n",
-    "plt.style.use(\"seaborn-dark\") \n",
+    "y = lagrange_interp(grids=[x, R(x)], x=xx)\n",
+    "plt.style.use(\"seaborn-dark\")\n",
     "fig = plt.figure()\n",
-    "plt.plot(x, R(x), color = \"r\", linewidth = 0.0, marker = \"x\", label = \"grids\")\n",
-    "plt.plot(xx, y, color = \"b\", linewidth = 1.0, linestyle = 'dashed', label = \"$L_n(x) \\; (n = 20)$\")\n",
-    "plt.plot(xx, R(xx), color = \"k\", label = \"$R(x) = 1 / (1+x^2)$\")\n",
+    "plt.plot(x, R(x), color=\"r\", linewidth=0.0, marker=\"x\", label=\"grids\")\n",
+    "plt.plot(\n",
+    "    xx, y, color=\"b\", linewidth=1.0, linestyle=\"dashed\", label=\"$L_n(x) \\; (n = 20)$\"\n",
+    ")\n",
+    "plt.plot(xx, R(xx), color=\"k\", label=\"$R(x) = 1 / (1+x^2)$\")\n",
     "plt.xlabel(\"$x$\")\n",
     "plt.ylabel(\"$y$\")\n",
     "plt.grid()\n",
     "plt.legend()\n",
     "# plt.savefig(\"./figure/lagrange_interpolation.pdf\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "plt.close()"
    ]
   },
   {
@@ -241,27 +262,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def linear_interp(grids, x):\n",
+    "def linear_interp(grids: Tuple[List[float], List[float]], x: float) -> float:\n",
     "    grid_x, grid_y = grids\n",
-    "    if len(grid_x) != len(grid_x):\n",
-    "        print(\"Error: Length of grid_x and grid_y must be the same !\")\n",
-    "        \n",
-    "    else:\n",
-    "        order = np.argsort(grid_x)\n",
-    "        grid_x, grid_y = grid_x[order], grid_y[order]\n",
-    "        \n",
-    "        linear_sum = 0.0\n",
-    "        for i in range(len(grid_x)-1):\n",
-    "            dist = grid_x[i+1] - grid_x[i]\n",
-    "            if abs(dist) > 1.0e-8:\n",
-    "                basis_func = (grid_y[i] * (grid_x[i+1] - x) + grid_y[i+1] * (x - grid_x[i])) / (grid_x[i+1] - grid_x[i])\n",
-    "                func = lambda x: 1 if (x < grid_x[i+1] and x >= grid_x[i]) else 0.0\n",
-    "                cond = np.array(list(map(func, x)))\n",
-    "                linear_sum += basis_func * cond\n",
-    "            else: # can be optimized\n",
-    "                print(\"[Error: The distance between x_{:d} and x_{:d} are too small !]\".format(i, i+1))\n",
+    "    assert len(grid_x) == len(grid_x), \"Error: Length of grid_x and grid_y must be the same!\"\n",
     "\n",
-    "        return linear_sum"
+    "    order = np.argsort(grid_x)\n",
+    "    grid_x, grid_y = grid_x[order], grid_y[order]\n",
+    "\n",
+    "    linear_sum = 0.0\n",
+    "    for i in range(len(grid_x) - 1):\n",
+    "        dist = grid_x[i + 1] - grid_x[i]\n",
+    "        assert abs(dist) > 1.0e-8, \"[Error: The distance between x_{:d} and x_{:d} are too small !]\".format(i, i + 1)\n",
+    "        basis_func = (\n",
+    "            grid_y[i] * (grid_x[i + 1] - x) + grid_y[i + 1] * (x - grid_x[i])\n",
+    "        ) / (grid_x[i + 1] - grid_x[i])\n",
+    "        func = lambda x: 1 if (x < grid_x[i + 1] and x >= grid_x[i]) else 0.0\n",
+    "        cond = np.array(list(map(func, x)))\n",
+    "        linear_sum += basis_func * cond\n",
+    "\n",
+    "    return linear_sum\n"
    ]
   },
   {
@@ -272,18 +291,21 @@
    "source": [
     "x = np.linspace(-5, 5, 11)\n",
     "xx = np.linspace(-5, 5, 101)\n",
-    "y = linear_interp(grids = [x, R(x)], x = xx)\n",
-    "plt.style.use(\"seaborn-dark\") \n",
+    "y = linear_interp(grids=[x, R(x)], x=xx)\n",
+    "plt.style.use(\"seaborn-dark\")\n",
     "fig = plt.figure()\n",
-    "plt.plot(x, R(x), color = \"r\", linewidth = 0.0, marker = \"x\", label = \"grids\")\n",
-    "plt.plot(xx, y, color = \"r\", linewidth = 1.0, linestyle = 'dashed', label = \"$Linear(x) \\; (n = 10)$\")\n",
-    "plt.plot(xx, R(xx), color = \"k\", label = \"$R(x) = 1 / (1+x^2)$\")\n",
+    "plt.plot(x, R(x), color=\"r\", linewidth=0.0, marker=\"x\", label=\"grids\")\n",
+    "plt.plot(\n",
+    "    xx, y, color=\"r\", linewidth=1.0, linestyle=\"dashed\", label=\"$Linear(x) \\; (n = 10)$\"\n",
+    ")\n",
+    "plt.plot(xx, R(xx), color=\"k\", label=\"$R(x) = 1 / (1+x^2)$\")\n",
     "plt.xlabel(\"$x$\")\n",
     "plt.ylabel(\"$y$\")\n",
     "plt.grid()\n",
     "plt.legend()\n",
     "# plt.savefig(\"./figure/linear_interpolation.pdf\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "plt.close()"
    ]
   },
   {
